posiGen_FullsendBox/src/objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>JobID__c</fullName>
        <formula>Opportunity.Numeric_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>JobID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <picklist>
            <picklistValues>
                <fullName>Albany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baton Rouge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bridgeport</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Houma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lafayette</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marrero</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michoud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Orleans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shreveport</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ServiceEndDate__c</fullName>
        <label>Service End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X18_Digit_ID__c</fullName>
        <formula>CASESAFEID(  Id )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>18 Digit ID</label>
        <type>Text</type>
    </fields>
</CustomObject>